--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,24 +5,20 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23.1'
 
-    - name: Test
-      run: go test -v ./...
-
-    - name: Benchmark
-      run: go test -bench ./... -test.count=3 -test.benchtime=1s
+      - name: Test
+        run: make test
