--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: test
 
 on:
   push:
@@ -21,4 +21,7 @@ jobs:
           go-version: '1.23.1'
 
       - name: Test
-        run: make test
+        run: go test -v -covermode=atomic -coverprofile=coverage.out -race -parallel ./...
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
