--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: '1.23.1'
 
       - name: Test
-        run: go test -v -covermode=atomic -coverprofile=coverage.out -race -parallel ./...
+        run: go test -v -covermode=atomic -coverprofile=coverage.out -race -parallel=8 ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
