--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,10 +6,10 @@ on:
     branches:
       - main
     paths-ignore:
-      - '**/*.md'
+      - "**/*.md"
   pull_request:
     paths-ignore:
-      - '**/*.md'
+      - "**/*.md"
 
 permissions:
   # Required: allow read access to the content for analysis.
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           # NOTE: Keep this in sync with the version from go.mod
-          go-version: '1.23.x'
+          go-version: "1.24.x"
           cache: false
 
       - name: golangci-lint
