--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           go-version: "1.24.x"
 
       - name: Test
-        run: go test -v -covermode=atomic -coverprofile=coverage.out -race -parallel=4 ./...
+        run: go test -v -covermode=atomic -coverprofile=coverage.out -race ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
