--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - '6379:6379'
     volumes:
       - redis_data:/data
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: '1024M'
 
 volumes:
   redis_data:
