--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,6 @@ jobs:
         run: go test -v -covermode=atomic -coverprofile=coverage.out -race ./...
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
