--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,9 @@ jobs:
           go-version: "1.24.x"
 
       - name: Test
-        run: go test -v -covermode=atomic -coverprofile=coverage.out -race ./...
+        run: |
+          go test -v -covermode=atomic -coverprofile=coverage.out -race ./...
+          make clean-coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
