--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,11 +5,9 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - "**/*.md"
   pull_request:
-    paths-ignore:
-      - "**/*.md"
+    branches:
+      - main
 
 permissions:
   # Required: allow read access to the content for analysis.
@@ -25,7 +23,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-go@v5
         with:
           # NOTE: Keep this in sync with the version from go.mod
